--- a/tweet-the-tube/index.html
+++ b/tweet-the-tube/index.html
@@ -9,3 +9,6 @@ section: tweet-the-tube
 <p>Follow Tweet the Tube now on Twitter: <a href="http://twitter.com/tweetthetube">http://twitter.com/tweetthetube</a></p>
 
 <p>XEWeb is not endorsed or associated with Transport for London and cannot guarantee the accuracy of the information provided.</p>
+
+<a class="twitter-timeline" data-dnt="true" href="https://twitter.com/tweetthetube" data-widget-id="673865600784056320">Tweets by @tweetthetube</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
