--- a/_posts/2011-02-11-generate-a-random-string-a-z-0-9-in-php.html
+++ b/_posts/2011-02-11-generate-a-random-string-a-z-0-9-in-php.html
@@ -16,7 +16,7 @@ categories:
 
 
 {% highlight php %}
-
+<?php
 /*
  * Create a random string
  * @author	XEWeb <>
@@ -38,4 +38,3 @@ function randomString($length = 6) {
 
 
 <p>You can remove any of the ranges in $characters (for example if you didn't want uppercase letters delete the <code>range('A','Z')</code>) or put in your own array of characters.</p>
-
