--- a/_posts/2011-07-14-flintstone-a-keyvalue-database-store-using-flat-files-for-php.html
+++ b/_posts/2011-07-14-flintstone-a-keyvalue-database-store-using-flat-files-for-php.html
@@ -32,6 +32,7 @@ tags:
 
 
 {% highlight php %}
+<?php
 
 try {
 
@@ -68,4 +69,3 @@ catch (Exception $e) {
 
 
 <p>For more information and to download visit <a href="/flintstone/">/flintstone/</a></p>
-
