--- a/flintstone/index.html
+++ b/flintstone/index.html
@@ -16,9 +16,13 @@ section: flintstone
 </ul>
 
 <h2>Installation</h2>
-<p>The easiest way to install Flintstone is via <a href="https://getcomposer.org/" target="_blank">composer</a>. Create the following composer.json file and run the php composer.phar install command to install it.</p>
+<p>To install Flintstone run the following command with Composer:</p>
 
-<p><strong>composer.json</strong></p>
+{% highlight bash %}
+composer require fire015/flintstone
+{% endhighlight %}
+
+<p>Or add to your composer.json file:</p>
 
 {% highlight json %}
 {
@@ -28,7 +32,7 @@ section: flintstone
 }
 {% endhighlight %}
 
-<p><strong>PHP</strong></p>
+<p><strong>PHP Example:</strong></p>
 
 {% highlight php %}
 <?php
