--- a/_posts/2009-12-30-quick-way-to-insert-an-array-into-a-table.html
+++ b/_posts/2009-12-30-quick-way-to-insert-an-array-into-a-table.html
@@ -15,7 +15,7 @@ categories:
 
 
 {% highlight php %}
-
+<?php
 function insert_array($table, $data) {
 	$cols = '(';
 	$values = '(';
@@ -37,10 +37,8 @@ function insert_array($table, $data) {
 
 
 {% highlight php %}
-
 <?php
 $arr = array('title' => $_POST['title'], 'product_code' => $_POST['product_code'], 'description' => $_POST['description'], 'price' => $_POST['price']);
 $product_id = insert_array("products", $arr);
 ?>
 {% endhighlight %}
-
