Data transformer class and tweaks

--- a/_posts/2009-12-31-sending-emails-the-right-way-using-phpmailer-and-email-templates.html
+++ b/_posts/2009-12-31-sending-emails-the-right-way-using-phpmailer-and-email-templates.html
@@ -18,6 +18,7 @@ categories:
 
 <p>In this example we will create a folder called "email_templates" and will create a file called "register.html" which will contain the login information when someone registers to our site:</p>
 
+<!--excerpt-->
 
 {% highlight html %}
 
@@ -82,5 +83,3 @@ if(!$mail->Send()) {
 ?>
 
 {% endhighlight %}
-
-
