--- a/_posts/2010-01-01-using-recaptcha-to-stop-spam-in-php.html
+++ b/_posts/2010-01-01-using-recaptcha-to-stop-spam-in-php.html
@@ -20,6 +20,7 @@ categories:
 
 <p>First we are going to store the public and private key in variables, this would usually go in something like config.php.</p>
 
+<!--excerpt-->
 
 {% highlight php %}
 
@@ -73,4 +74,3 @@ if (!empty($_POST)) {
 </form>
 
 {% endhighlight %}
-
