--- a/_posts/2010-01-03-how-to-setup-one-time-download-of-your-files-securely.html
+++ b/_posts/2010-01-03-how-to-setup-one-time-download-of-your-files-securely.html
@@ -11,10 +11,11 @@ categories:
 - PHP
 ---
 
-<p>If you are selling a digital product and want to offer it for download but are concerned that people will share the URL to the file, you could use a solution like <a href="http://www.clickbank.com">ClickBank</a>. However the advantage of setting up one time downloads from your server instead is that you have more control over what you are selling and you don't have to pay any fee's.</p>
+<p>If you are selling a digital product and want to offer it for download but are concerned that people will share the URL to the file, you could use a solution like ClickBank. However the advantage of setting up one time downloads from your server instead is that you have more control over what you are selling and you don't have to pay any fee's.</p>
 
 <p>Let us assume that you have setup and integrated a payment solution (such as PayPal using the IPN, post coming soon on this) and you have a database setup that holds the payment information.</p>
 
+<!--excerpt-->
 
 {% highlight mysql %}
 
@@ -89,4 +90,3 @@ else {
 }
 ?>
 {% endhighlight %}
-
