--- a/_posts/2010-01-07-a-simple-and-lightweight-javascript-calendar.html
+++ b/_posts/2010-01-07-a-simple-and-lightweight-javascript-calendar.html
@@ -12,6 +12,7 @@ categories:
 
 <p>This Javascript code will display a calendar in a table, useful for date picking...</p>
 
+<!--excerpt-->
 
 {% highlight javascript %}
 
@@ -148,4 +149,3 @@ Calendar.prototype.nextMonth = function() {
 </html>
 
 {% endhighlight %}
-
