--- a/_posts/2010-01-15-simple-php-caching.html
+++ b/_posts/2010-01-15-simple-php-caching.html
@@ -20,6 +20,7 @@ categories:
 
 <p>Next create a file called cache.php which contains the following code:</p>
 
+<!--excerpt-->
 
 {% highlight php %}
 
@@ -125,4 +126,3 @@ include("cache_footer.php");
 ?>
 
 {% endhighlight %}
-
