--- a/_posts/2011-07-14-flintstone-a-keyvalue-database-store-using-flat-files-for-php.html
+++ b/_posts/2011-07-14-flintstone-a-keyvalue-database-store-using-flat-files-for-php.html
@@ -68,4 +68,4 @@ catch (Exception $e) {
 {% endhighlight %}
 
 
-<p>For more information and to download visit <a href="/flintstone/">/flintstone/</a></p>
+<p>For more information and to download visit <a href="/flintstone/">this page</a>.</p>
