--- a/_posts/2011-11-03-simple-php-caching-improved.html
+++ b/_posts/2011-11-03-simple-php-caching-improved.html
@@ -18,6 +18,7 @@ categories:
 
 <p>Next create a file called cache.php which contains the following code:</p>
 
+<!--excerpt-->
 
 {% highlight php %}
 
@@ -149,4 +150,3 @@ include("cache_footer.php");
 ?>
 
 {% endhighlight %}
-
