--- a/flintstone/documentation.html
+++ b/flintstone/documentation.html
@@ -8,8 +8,14 @@ permalink: /flintstone/documentation/
 
 <p><a href="/flintstone/docs/" class="button">View Generated Docs</a></p>
 
-<p><strong>Flintstone::load(string $database, array $options)</strong></p>
-<p>Load a database - returns an instance of <code>FlintstoneDB</code> (see methods below).</p>
+<h2>Loading a database</h2>
+{% highlight php %}
+<?php
+$options = array('dir' => '/path/to/database/dir/');
+$users = new Flintstone('users', $options);
+{% endhighlight %}
+
+<p>Options can be the following:</p>
 
 <div class="mobile-side-scroller">
 	<table>
@@ -29,7 +35,7 @@ permalink: /flintstone/documentation/
 					<p>The directory where the database files are stored (this should be somewhere that is not web accessible) e.g. /path/to/database/</p>
 				</td>
 				<td>
-					<p>'' (empty string)</p>
+					<p>current working directory</p>
 				</td>
 			</tr>
 			<tr>
@@ -59,7 +65,7 @@ permalink: /flintstone/documentation/
 					<p><code>cache</code></p>
 				</td>
 				<td>
-					<p>Store get() results in memory</p>
+					<p>Whether to cache get() results for faster data retrieval</p>
 				</td>
 				<td>
 					<p>true</p>
@@ -84,12 +90,14 @@ permalink: /flintstone/documentation/
 					<p>The amount of memory to use before writing to a temporary file</p>
 				</td>
 				<td>
-					<p>1048576</p>
+					<p>2097152</p>
 				</td>
 			</tr>
 		</tbody>
 	</table>
 </div>
+
+<p>Flintstone has the following public methods:</p>
 
 <div class="mobile-side-scroller">
 	<table>
@@ -114,14 +122,6 @@ permalink: /flintstone/documentation/
 				</td>
 				<td>
 					<p>Set data for the key name. Data can be a string, integer, float or array. Returns true or will throw an exception if fails to set.</p>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<p><code>replace(string $key, mixed $data)</code></p>
-				</td>
-				<td>
-					<p>Replace data for the key name. Using set() on an existing key has the same effect. Returns true or will throw an exception if fails to set.</p>
 				</td>
 			</tr>
 			<tr>
@@ -160,5 +160,24 @@ permalink: /flintstone/documentation/
 	</table>
 </div>
 
-<p><strong>Flintstone::unload(string $database)</strong></p>
-<p>Unload a database (destroys the object)</p>
+<h2>Changing the formatter</h2>
+<p>By default Flintstone will encode/decode data using PHP's serialize functions, however you can override this with your own class if you prefer.</p>
+<p>Just make sure it implements <code>Flintstone\Formatter\FormatterInterface</code> and then you can provide it as the formatter option.</p>
+<p>If you wish to use JSON as the formatter, Flintstone already ships with this as per the example below:</p>
+
+{% highlight php %}
+<?php
+require 'vendor/autoload.php';
+
+use Flintstone\Flintstone;
+use Flintstone\Formatter\JsonFormatter;
+
+$users = new Flintstone('users', array(
+	'dir' => __DIR__,
+	'formatter' => new JsonFormatter()
+));
+{% endhighlight %}
+
+<h2>Changing the cache</h2>
+<p>To speed up data retrieval Flintstone can store the results of <code>get()</code> in a cache store. By default this uses a simple array that only persist's for as long as the <code>Flintstone</code> object exists.</p>
+<p>If you want to use your own cache store (such as Memcached) you can pass a class as the <code>cache</code> option. Just make sure it implements <code>Flintstone\Cache\CacheInterface</code>.</p>
