--- a/flintstone/examples.html
+++ b/flintstone/examples.html
@@ -8,16 +8,17 @@ permalink: /flintstone/examples/
 
 {% highlight php %}
 <?php
+
 // Set options
-$options = array('dir' => '/path/to/database/dir/');
+$options = ['dir' => '/path/to/database/dir/'];
 
 // Load the databases
 $users = new Flintstone('users', $options);
 $settings = new Flintstone('settings', $options);
 
 // Set keys
-$users->set('bob', array('email' => 'bob@site.com', 'password' => '123456'));
-$users->set('joe', array('email' => 'joe@site.com', 'password' => 'test'));
+$users->set('bob', ['email' => 'bob@site.com', 'password' => '123456']);
+$users->set('joe', ['email' => 'joe@site.com', 'password' => 'test']);
 $settings->set('site_offline', 1);
 $settings->set('site_back', '3 days');
 
@@ -39,9 +40,6 @@ foreach ($keys as $username) {
 	echo $username.', your email is ' . $user['email'];
 	echo $username.', your password is ' . $user['password'];
 }
-
-// Retrieve all data
-$data = $users->getAll(); // returns array('bob' => array('email' => 'bob@site.com', 'password' => '123456'), 'joe' => array('email' => 'joe@site.com', 'password' => 'test'), ...)
 
 // Delete a key
 $users->delete('joe');
