--- a/flintstone/index.html
+++ b/flintstone/index.html
@@ -40,14 +40,13 @@ require 'vendor/autoload.php';
 
 use Flintstone\Flintstone;
 
-$options = array('dir' => '/path/to/database/dir/');
+$options = ['dir' => '/path/to/database/dir/'];
 $users = new Flintstone('users', $options);
 {% endhighlight %}
 
 <h2>Requirements</h2>
 <ul>
-	<li>Any flavour of PHP 5.3+ should do</li>
-	<li>[optional] PHPUnit to execute the test suite</li>
+	<li>PHP 5.6+</li>
 </ul>
 
 <h2>Data types</h2>
@@ -57,6 +56,7 @@ $users = new Flintstone('users', $options);
 	<li>Integers</li>
 	<li>Floats</li>
 	<li>Arrays</li>
+	<li>Null</li>
 </ul>
 
 <h2>License</h2>
