Update flintstone docs

--- a/flintstone/install.html
+++ b/flintstone/install.html
@@ -6,7 +6,7 @@ subsection: install
 permalink: /flintstone/install/
 ---
 
-<p>To install Flintstone run the following command with Composer:</p>
+<p>To install Flintstone run the following command with <a href="https://getcomposer.org/" target="_blank">Composer</a>:</p>
 
 {% highlight bash %}
 composer require fire015/flintstone
@@ -17,9 +17,7 @@ composer require fire015/flintstone
 {% highlight json %}
 {
 	"require": {
-		"fire015/flintstone": "2.*"
+		"fire015/flintstone": "^2"
 	}
 }
 {% endhighlight %}
-
-<p>To get the latest code in development feel free to clone it from <a href="https://github.com/fire015/flintstone">GitHub</a>.</p>
