More code blocks

--- a/_posts/2021-09-26-tryhackme-biteme-official-writeup.html
+++ b/_posts/2021-09-26-tryhackme-biteme-official-writeup.html
@@ -94,7 +94,7 @@ while (($line = fgets($file)) !== false) {
 fclose($file);
 {% endhighlight %}
 
-<p>Very quickly we find a suitable password... "violet" which has an MD5 hash of d1d813a48d99f0e102f7d0a1b9068001.</p>
+<p>Very quickly we find a suitable password... <code>violet</code> which has an MD5 hash of <code>d1d813a48d99f0e102f7d0a1b9068001</code>.</p>
 
 <p>We can now get onto the next page, which asks for a 4 digit code.</p>
 
