Update twitter follow button

--- a/about/index.html
+++ b/about/index.html
@@ -12,5 +12,4 @@ section: about
 
 <iframe src="https://ghbtns.com/github-btn.html?user=fire015&type=follow&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
 
-<a href="https://twitter.com/xeweb" class="twitter-follow-button" data-show-count="false">Follow @xeweb</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<a href="https://twitter.com/jas_m?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @jas_m</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
