Remove PHP mention

--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ section: about
 
 <p>XEWeb started in 2004 offering a wide range of tutorials, downloads, code snippets and web templates.</p>
 
-<p>Nowadays we run a blog and a couple of open source PHP projects which we hope you will find interesting.</p>
+<p>Nowadays we run a blog and a couple of open source projects which we hope you will find interesting.</p>
 
 <p>Feel free to follow us below.</p>
 
