Add old url redirects

--- a/_posts/2017-01-31-moving-tweet-the-tube-to-aws-lambda.html
+++ b/_posts/2017-01-31-moving-tweet-the-tube-to-aws-lambda.html
@@ -7,6 +7,8 @@ slug: moving-tweet-the-tube-to-aws-lambda
 title: Moving Tweet the Tube to AWS Lambda
 categories:
 - AWS
+redirect_from:
+- /2017/01/31/moving-tweet-the-tube-to-aws-lambda/
 ---
 
 <p>When I started <a href="/tweet-the-tube/">Tweet the Tube</a> it was a small PHP application triggered by a cron job.</p>
