--- a/_posts/2021-09-26-tryhackme-biteme-official-writeup.html
+++ b/_posts/2021-09-26-tryhackme-biteme-official-writeup.html
@@ -7,6 +7,8 @@ slug: tryhackme-biteme-official-writeup
 title: "[TryHackMe] biteme - official writeup"
 categories:
 - writeup
+redirect_from:
+- /2021/09/26/tryhackme-biteme-official-writeup/
 ---
 
 <p>This is the official writeup for the <a href="https://tryhackme.com/room/biteme" target="_blank">biteme room</a> on TryHackMe, it is the first challenge I created and also my first writeup, feedback is appreciated.</p>
