--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@ section: home
         <div class="row">
             <div class="col-lg-4 ms-auto">
                 <p class="lead">
-                    Hi there, I'm Jason. For the past 12 years I have worked in various software engineering leadership roles. I've been lucky enough to work for some fantastic companies, including Facebook and BP.
+                    Hi there, I'm Jason. For over 15 years I have worked in tech, building software and managing teams. I have held senior engineering leadership positions at Facebook, BP and VoucherCodes.
                     <br><br>
-                    After a while, I started to feel like I wanted to do something more. I wanted to help startups navigate the technical challenges they face as they grow and scale. I realized that I had a lot of knowledge and experience to offer and I wanted to put it to use helping others.
+                    As I gained more knowledge and experience in the industry, I realized that I wanted to use my skills to help others.
+                    <br><br>
+                    As a fractional CTO, I partner with businesses of all sizes and stages to help them develop and execute their technical strategies.
                 </p>
             </div>
             <div class="col-lg-4 me-auto">
-                <p class="lead">
-                    As a technical advisor I work with startups of all sizes and stages, helping them develop their technical strategies and overcome challenges - from hiring great engineers to building an MVP.
+                <p class="lead">                    
+                    I provide guidance and support on a wide range of topics, from hiring and managing engineers to building and launching products.
                     <br><br>
                     I have a knack for explaining complex technical concepts in a way that is easy for non-technical stakeholders to understand.
                     <br><br>
