Add work history

--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@ layout: home
 section: home
 ---
 
-<section class="page-section mb-0" id="about">
+<!-- About Section-->
+<section class="page-section pb-0" id="about">
     <div class="container">
-        <!-- About Section Heading-->
         <h2 class="page-section-heading text-center text-uppercase">About</h2>
-        <!-- Icon Divider-->
         <div class="divider-custom">
             <div class="divider-custom-line"></div>
             <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
             <div class="divider-custom-line"></div>
         </div>
-        <!-- About Section Content-->
         <div class="row">
             <div class="col-lg-4 ms-auto">
                 <p class="lead">
@@ -34,7 +32,66 @@ section: home
                 </p>
             </div>
         </div>
-        <!-- About Section Button-->
+    </div>
+</section>
+
+<!-- Previous Companies Section-->
+<section class="page-section pb-0" id="companies">
+    <div class="container">
+        <h2 class="page-section-heading text-center text-uppercase">Previous Companies</h2>
+        <div class="divider-custom">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 ms-auto text-center mb-4">
+                <p><img src="/img/work/meta.jpg" class="img-thumbnail" alt="Meta"></p>
+                <p class="lead">Ensuring Meta's products were reliable and always running (Facebook, Instagram, WhatsApp, AI)</p>
+            </div>
+            <div class="col-lg-4 me-auto text-center mb-4">
+                <p><img src="/img/work/bp.jpg" class="img-thumbnail" alt="BP"></p>
+                <p class="lead">Running BP's pay for fuel app (BPme) and scientific tools for subsurface oil & gas exploration</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 ms-auto text-center mb-4">
+                <p><img src="/img/work/vc.jpg" class="img-thumbnail" alt="VoucherCodes"></p>
+                <p class="lead">Managing teams of engineers and co-ordinating large projects on the world's busiest voucher website</p>
+            </div>
+            <div class="col-lg-4 me-auto text-center">
+                <p><img src="/img/work/hearst.jpg" class="img-thumbnail" alt="Hearst Magazines"></p>
+                <p class="lead">Building the next generation of news publishing systems for Hearst's brands</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Ways I Can Help Section-->
+<section class="page-section" id="help">
+    <div class="container">
+        <h2 class="page-section-heading text-center text-uppercase">Ways I Can Help</h2>
+        <div class="divider-custom">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-8 col-xl-7">
+                <ul class="lead">
+                    <li>Product development (turning ideas into reality)</li>
+                    <li>Technical strategy & roadmap</li>
+                    <li>Hiring the right people (internal or outsourced)</li>
+                    <li>Modernizing existing technology or processes</li>
+                    <li>Scaling products for growth</li>
+                    <li>Technical due diligence</li>
+                    <li>Infrastructure/cloud setup and management (hosting)</li>
+                    <li>Implementing software development best practices</li>
+                    <li>Representing your technology (to customers, investors, board members etc)</li>
+                </ul>
+            </div>
+        </div>
+
         <div class="text-center mt-4">
             <a href="mailto:jason@xeweb.net" class="btn btn-xl btn-outline-dark me-2 btn-mb">
                 <i class="fas fa-comments me-2"></i>
