Add architecture note

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ section: home
             <div class="col-lg-8 col-xl-7">
                 <ul class="lead">
                     <li>Product development (turning ideas into reality)</li>
-                    <li>Technical strategy & roadmap</li>
+                    <li>Technical strategy, architecture & roadmap</li>
                     <li>Hiring the right people (internal or outsourced)</li>
                     <li>Modernizing existing technology or processes</li>
                     <li>Scaling products for growth</li>
